# keepwatch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  detector.yaml.example  go2rtc.yaml.example  pyproject.toml  run_detector.py
.github/workflows/: test.yml
dashboard/: app.js  index.html  style.css
deploy/: keepwatch-detector.service  keepwatch-go2rtc.service
detector/: __init__.py  api.py  config.py  database.py  encoders.py  frame_processing.py  image_storage.py  motion_detector.py  person_detector.py  recording.py  service.py  stream_capture.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  cameras.md  configuration.md  encoders.md
docs/cameras/: ezviz.example.md  icsee.example.md  tapo.example.md
tests/: test_api_cameras.py  test_camera_pipeline.py  test_config_crop.py  test_encoders.py  test_recording.py
