[project]
name = "keepwatch"
version = "0.1.0"
description = "A small, readable, self-hosted CCTV recorder for the home lab."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kadek Pradnyana" },
]
keywords = ["cctv", "rtsp", "yolov8", "motion-detection", "self-hosted", "home-lab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",  # required by fastapi.testclient
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/kadekp/keepwatch"
Issues = "https://github.com/kadekp/keepwatch/issues"
Documentation = "https://github.com/kadekp/keepwatch#readme"

[project.scripts]
keepwatch = "run_detector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detector"]
include = ["run_detector.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter
